--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 name: Alpha
 description: Alphs template for Jekyll
-baseurl: '/Alpha-Jekyll-Theme'
+baseurl: '/'
 
-url: "http://localhost:4000"
+url: "https://kotlinlapaz.dev"
 
 paginate: 10
 
