--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-name: Alpha
-description: Alphs template for Jekyll
+name: Kotlin La Paz
+description: Kotlin User Group La Paz
 baseurl: '/'
 
 url: "https://kotlinlapaz.dev"
